added pages link

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<meta http-equiv="refresh" content=0; url="https://testanib.github.io/solidity-voting-app/dist/index.html">
+<script>
+window.location.href = 'https://testanib.github.io/solidity-voting-app/dist/index.html';
+</script>
